samples/_failures_safe/1761521474_88fd32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dcc0fd61.c: In function ‘main’:
./samples/SAFE/__tmp_dcc0fd61.c:177:5: error: expected expression at end of input
  177 |     if (edge_count <
      |     ^~
./samples/SAFE/__tmp_dcc0fd61.c:177:5: error: expected declaration or statement at end of input
